Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68721

Packet protocol is not endian-safe

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.2
    • 5.11.0
    • QML: Tooling
    • None
    • 1ae6ef5ec55aedacb36060e6f7790c082725a21d

      QPacketProtocol reads the length of the packets verbatim from the stream. This won't work if the end points have different endianness (same holds for the implementation in QtCreator).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes