PacketProtocol: Explicitly transmit packet sizes in little endian

So far the protocol would fail if the endpoints have different
endianness.

Task-number: QTBUG-68721
Change-Id: Ib53894b1e2f3eecf40160bb7bb9cfaa4beb2c045
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>